--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_passive_vp.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_passive_vp.tex
@@ -18,7 +18,7 @@
 \begin{frame}{タスクの実行方法}
     \begin{itemize}
         \item $\tau_{i}$ は作業保存型方法で実行され, プリエンプションとマイグレーションの両方が許可される
-        \item $\tau_{i}$ が実行のために $\Pi$ でパッシブ VP を選択するための優先順位はない, すなわち現在のジョブの適格な頂点を実行するために, 利用可能な任意のパッシブ VP を使用できる
+        \item $\tau_{i}$ が実行のために $\Pi$ でパッシブ VP を選択するための優先度はない, すなわち現在のジョブの適格な頂点を実行するために, 利用可能な任意のパッシブ VP を使用できる
     \end{itemize}
 \end{frame}
 
